--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Product Sans';
-    background-color: rgba(24, 24, 24, 0.945);
+    background-color: #181818f1;
 }
 
 /* ---------- Seção principal ---------- */
@@ -19,11 +19,13 @@ body {
 
 .intro h1, h2{
     font-size: 3rem;
+    margin-bottom: 1em;
 }.intro span {
     color:blue;
 }.intro p {
     font-size: 1.5rem;
-    color:rgb(185, 185, 185)
+    color:rgb(185, 185, 185);
+    margin-bottom: 1.5em;
 }
 
 .bannerIMG {
@@ -32,17 +34,20 @@ body {
 }
 
 .actions button{
-    border: 1px solid blue;
+    border: none;
     border-radius: 25px;
     padding: 10px 15px;
     color: aliceblue;
     text-decoration: none;
     font-weight: bold;
-    background-color: blue;
+    background: rgb(9,9,121);
+    background: linear-gradient(-45deg, rgba(9,9,121,1) 35%, rgba(0,0,255,1) 100%);
+    box-shadow: 5px 5px 15px #09093a;
+
     margin-right: 1rem;
 }.actions button:hover {
     transition: 0.2s;
-    transform: scale(0.9);
+    transform: scale(1.2);
     border: 1px solid aliceblue;
     color: aliceblue;
     background-color: transparent;
@@ -50,18 +55,58 @@ body {
 
 /* ---------- Seção Sobre mim ---------- */
 
-.sobreMim {
+#sobreMim {
     padding: 5rem 15rem;
     text-align: center;
 }
 
-.sobreMim h2 {
+h3 {
     font-size: 2rem;
     color: #d4d4d4;
+    text-align: center;
+    margin-bottom: 2em;
 }
 
-.sobreMim p {
+#sobreMim p {
     color: rgb(185, 185, 185);
     line-height: 2;
+}
+
+/* ---------- Seção Habilidades ---------- */
+
+#habilidades, #historicoProfissional {
+    background-color: #181818;
+    padding: 5em;
+}
+
+.cardsHabilidades {
+    display: flex;
+    list-style-type: none;
+}
+
+.cardsHabilidades li{
+    background: rgb(9,9,121);
+    background: linear-gradient(-45deg, rgba(9,9,121,1) 35%, rgba(0,0,255,1) 100%);
+    border-radius: 15px 15px 15px 0;
+    border-bottom: 3px solid #141497;
+    box-shadow: 5px 5px 15px #09093a;
+    width: 100px;
+    text-align: center;
+    padding: 20px;
+    margin: 0 auto;
+    align-items: center;
+}.cardsHabilidades li:hover{
+    transition: 0.2s;
+    transform: scale(1.1);
 
 }
+
+.cardsHabilidades p {
+    color: white;
+    font-weight: bold;
+}
+
+#certificadosEdiplomas, #projetos {
+    padding: 5em;
+}
+
